--- a/x360ce.App.Beta/Controls/OptionsVirtualDeviceControl.xaml
+++ b/x360ce.App.Beta/Controls/OptionsVirtualDeviceControl.xaml
@@ -40,7 +40,8 @@
 					Name="PollingRateComboBox"
 					Grid.Row="0"
 					Grid.Column="1"
-					Width="Auto" />
+					Width="Auto"
+					Style="{StaticResource ComboBoxFix}" />
 				<Button
 					Name="RefreshButton"
 					Grid.Row="0"
