Converting Programs Control from Windows Forms to WPF.

--- a/x360ce.App.Beta/Controls/ProgramListControl.xaml
+++ b/x360ce.App.Beta/Controls/ProgramListControl.xaml
@@ -87,7 +87,7 @@
 			AutoGenerateColumns="False"
 			Background="{DynamicResource {x:Static SystemColors.WindowBrushKey}}"
 			IsReadOnly="True"
-			SelectionChanged="MainDataGrid_SelectionChanged">
+			SelectionChanged="MainDataGrid_SelectionChanged" KeyDown="MainDataGrid_KeyDown">
 			<DataGrid.Columns>
 				<DataGridTextColumn
 					Binding="{Binding FileName}"
