--- a/x360ce.App.Beta/Controls/ProgramsControl.xaml
+++ b/x360ce.App.Beta/Controls/ProgramsControl.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-	x:Class="x360ce.App.Controls.ProgramControl"
+	x:Class="x360ce.App.Controls.ProgramsControl"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -23,6 +23,6 @@
 			<RowDefinition Height="Auto" />
 		</Grid.RowDefinitions>
 		<local:ProgramListControl x:Name="ProgramListPanel" Grid.Row="0" />
-		<local:ProgramItemControl x:Name="ProgramItemPanel" Grid.Row="1" />
+		<local:ProgramItemControl x:Name="ProgramItemPanel" Grid.Row="1" IsEnabled="False" />
 	</Grid>
 </UserControl>
