Converting User Game Details Control from Windows Forms to WPF.

--- a/x360ce.App.Beta/Controls/ProgramListControl.xaml
+++ b/x360ce.App.Beta/Controls/ProgramListControl.xaml
@@ -100,7 +100,7 @@
 					Binding="{Binding FileProductName}"
 					EditingElementStyle="{StaticResource TextBoxCell}"
 					ElementStyle="{StaticResource TextBlockCell}"
-					Header="File Title" />
+					Header="Product Name" />
 			</DataGrid.Columns>
 			<DataGrid.CellStyle>
 				<Style TargetType="DataGridCell">
